test/official_tests/assignment/to_this.lox
class Foo {
  Foo() {
    this = "value"; // error: {"line":3,"message":"Invalid assignment target","type":"ParseError"}
  }
}

Foo();
